fix column wrapping for projects, fix box-sizing css

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Green): #597058;
 */
 
 * {
-  border-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
